# ddnsd

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  service_name.in
scripts/: Install-DynamicDNSService.ps1  Uninstall-DynamicDNSService.ps1
src/: config.rs  main.rs  utils.rs  windows.rs
