[package]
name = "ddnsd"
version = "0.1.0"
authors = ["Kalle Kankaanpää <kalle.kankaanpaa@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dynamic DNS daemon"
repository = "https://github.com/kallekankaanpaa/ddnsd"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
ureq = "2"
log = "0.4"
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
simple_logger = "2"
anyhow = "1"
thiserror = "1"

