[package]
name = "ddnsd"
version = "0.0.1"
authors = ["Kalle Kankaanpää <kalle.kankaanpaa@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dynamic DNS daemon"
repository = "https://github.com/kallekankaanpaa/ddnsd"
readme = "README.md"

[dependencies]
once_cell = "1"
reqwest = "0.11"
ureq = "2"
log = "0.4"
base64 = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
anyhow = "1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3"
windows-event-log = { git = "https://github.com/kallekankaanpaa/windows-event-log", version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"
signal-hook = "0.3"
simple_logger = "2"
